# samples

./: buffer.cpp  fibfac.cpp  intrusive_list.cpp  inverse.cc  nullobj.cc  ref.cpp  search.cpp  test.cpp
bluetooth/: sdlproxy.py  service.py
bluetooth/routing/: bluetooth_connection.py  connection.py  registry.py  route.py
boost/: filesystem.cpp
boost/asio/: main.cpp  server.cpp  server.h  tcp_connection.cpp  tcp_connection.h
boost/sslbuf/: conanfile.txt
cxx/: fibfac.cpp  hexfill.cpp  script.cpp  strlen.cpp  struct-init.cpp
cxx/boost/: boostoptional.cpp
cxx/boost/asio/: CMakeLists.txt  main.cpp  server.cpp  tcp_connection.cpp  tcp_connection.h  tcp_server.cpp  tcp_server.h  udp_server.cpp  udp_server.h
cxx/mexit/: mexit.cc
cxx/sfm/: escalator.h
cxx/std/: addoverload.cpp  arrsize_tdectype.cpp  autoint.cpp  bind.cpp  copystream.cpp  emptyclass.cpp  explicitcast.cpp  factorym.cpp  foldexpr.cpp  forward.cpp  genericlambda.cpp  (+17 more)
cxx/trie/: CMakeLists.txt  main.cpp  trie.cpp  trie.h  trie_find_test.cpp  trie_insert_test.cpp  trie_remove_test.cpp  trie_test.cpp
linux/: Makefile  bigfile.c  file.c  filestream.c  lkm_example.c  lkm_example2.c
python/: CMakeLists.txt
python/bluetooth/: client.py  server.py
python/bluetooth/routing/: __init__.py
python/bluetooth/routing/tests/: test_connection.py  test_registry.py
sfm/: escalator.cpp  sfm.h
sslbuf/: CMakeLists.txt  main.cpp
std/: alias.cpp  assign.cpp  copyctr.cpp  copystream.cpp  declval.cpp  deduction.cpp  enumclass.cpp  exceptions.cpp  explicitcast.cpp  files.cpp  genericlambda.cpp  lambda.cpp  methodchain.cpp  nodiscard.cpp  other.cpp  parallel.cpp  poolallocator.cpp  regexe.cpp  set_erase.cpp  sharedstr.cpp  smartpointer.cpp  tagtemplate.cpp  testee.cpp  typeinfo.cpp  uniqsharedptr.cpp  variabletemplate.cpp
tasks/: leafcounter.cpp  shisft.cpp  substring.cpp
tun/: tun.cc
uml/: async-tcp-server.puml  async-udp-server.puml
(+79 files in other folders)
